# flask-htmx-tailwind-alpine-workshop

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
01-index/: index.html
02-partials-vs-components/: index.html
03-website-without-reloading/: index.html
04-dynamic-pagination/: index.html
05-adding-feeds/: index.html
06-read-status/: index.html
07-unread-number-badges/: index.html
app/: __init__.py
app/templates/: base.html  feed.html
docs/: 01-index.md  02-partials-vs-components.md  03-website-without-reloading.md  04-dynamic-pagination.md  05-adding-feeds.md  06-read-status.md  07-unread-number-badges.md  index.md
search/: search_index.json
steps/01-website-without-reloading/app/: __init__.py
steps/01-website-without-reloading/app/templates/: base.html  feed.html
steps/01-website-without-reloading/app/templates/partials/: entry.html  entry_page.html
steps/02-dynamic-pagination/app/: __init__.py
steps/02-dynamic-pagination/app/templates/: feed.html
steps/02-dynamic-pagination/app/templates/partials/: entry_page.html
steps/03-01-adding-feeds-htmx/app/: __init__.py
steps/03-01-adding-feeds-htmx/app/templates/: base.html  feed.html
steps/03-01-adding-feeds-htmx/app/templates/partials/: add_feed.html  entry.html
steps/03-02-adding-feeds-alpine/app/: __init__.py
steps/04-read-status/app/templates/: feed.html
steps/04-read-status/app/templates/partials/: entry.html  entry_page.html
steps/05-unread-numbers/app/: __init__.py
steps/05-unread-numbers/app/templates/partials/: entry.html
